# learning_python

./: .gitignore  README.md  WezTerm  pyproject.toml
nlp_cookbook/: scrape_medium.py
nlp_cookbook/notebooks/: ch10a.ipynb  ch10b.ipynb  ch10c.ipynb  ch10d.ipynb  ch10e.ipynb  ch1b.ipynb  ch2.ipynb  ch3a.ipynb  ch3b.ipynb  ch3c.ipynb  ch3d.ipynb  ch4.ipynb  ch4b.ipynb  ch4c.ipynb  ch4d.ipynb  ch4e.ipynb  ch5a.ipynb  ch5b.ipynb  ch5c.ipynb  ch5d.ipynb  ch6a.ipynb  ch6b.ipynb  ch6c.ipynb  ch6d.ipynb  ch7a.ipynb  ch7b.ipynb  ch8a.ipynb  ch8b.ipynb  ch9a.ipynb  ch9b.ipynb  ch9c.ipynb  ch9d.ipynb  lime_explanation.html  test.py
nlp_cookbook/reports/: chronos.md  fine_tuned_bert.md  lda-gensim.html  ner_vis.html
nlp_cookbook/scripts/: ch1a.ipynb  ch1b.ipynb
nlp_cookbook/util/: file_utils.ipynb  file_utils.py
nlp_spacy/: py1.py  py2.py  spacy101.ipynb  spacy_intro.ipynb  spacy_linguistic.ipynb  spacy_matching.ipynb  spacy_tutorial.ipynb
nlp_spacy/Data/: nvidia2025q3.txt
tf_intro/: intro.ipynb
